generated/checkers/gen/AllGen-UAF-67801fa67b94ebd0e4da7a77ac2d9f321b75fbe0/build_logs/syntax-repair-07/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In function ‘void {anonymous}::reportWriteAfterPublish(clang::ento::CheckerContext&, clang::ento::BugType&, const clang::Stmt*, const clang::Stmt*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:99:59: error: cannot convert ‘const clang::SourceManager’ to ‘const clang::ento::PathDiagnosticLocation&’
   99 |     R->addNote("Object published here", C.getSourceManager(),
      |                                         ~~~~~~~~~~~~~~~~~~^~
      |                                                           |
      |                                                           const clang::SourceManager
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:201:61: note:   initializing argument 2 of ‘void clang::ento::BugReport::addNote(llvm::StringRef, const clang::ento::PathDiagnosticLocation&, llvm::ArrayRef<clang::SourceRange>)’
  201 |   void addNote(StringRef Msg, const PathDiagnosticLocation &Pos,
      |                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In function ‘void {anonymous}::reportCallAfterPublish(clang::ento::CheckerContext&, clang::ento::BugType&, const clang::ento::CallEvent&, const clang::Stmt*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:121:59: error: cannot convert ‘const clang::SourceManager’ to ‘const clang::ento::PathDiagnosticLocation&’
  121 |     R->addNote("Object published here", C.getSourceManager(),
      |                                         ~~~~~~~~~~~~~~~~~~^~
      |                                                           |
      |                                                           const clang::SourceManager
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:201:61: note:   initializing argument 2 of ‘void clang::ento::BugReport::addNote(llvm::StringRef, const clang::ento::PathDiagnosticLocation&, llvm::ArrayRef<clang::SourceRange>)’
  201 |   void addNote(StringRef Msg, const PathDiagnosticLocation &Pos,
      |                               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPreCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:210:54: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*> >::lookup_type’ {aka ‘const clang::Stmt* const*’} to ‘const clang::Stmt*’ in initialization
  210 |       const Stmt *PubSite = State->get<PublishedSite>(MR);
      |                             ~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
      |                                                      |
      |                                                      clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*> >::lookup_type {aka const clang::Stmt* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkBind(clang::ento::SVal, clang::ento::SVal, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:232:50: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*> >::lookup_type’ {aka ‘const clang::Stmt* const*’} to ‘const clang::Stmt*’ in initialization
  232 |   const Stmt *PubSite = State->get<PublishedSite>(Base);
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
      |                                                  |
      |                                                  clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*> >::lookup_type {aka const clang::Stmt* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: At global scope:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:72:13: warning: ‘bool {anonymous}::isPublishedRegion(clang::ento::ProgramStateRef, const clang::ento::MemRegion*)’ defined but not used [-Wunused-function]
   72 | static bool isPublishedRegion(ProgramStateRef State, const MemRegion *R) {
      |             ^~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:63:13: warning: ‘bool {anonymous}::sameBaseRegion(const clang::ento::MemRegion*, const clang::ento::MemRegion*)’ defined but not used [-Wunused-function]
   63 | static bool sameBaseRegion(const MemRegion *A, const MemRegion *B) {
      |             ^~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
